Fix ToC spacing

--- a/refreshed/main.css
+++ b/refreshed/main.css
@@ -221,6 +221,11 @@ body {
 	position: absolute;
 	right: 0;
 }
+#leftbar-bottom a {
+	padding-right: 10px;
+	padding-top: 0.15em;
+	padding-bottom: 0.15em;
+}
 a.toclevel-2 {
 	padding-right: 20px !important;
 }
